# Lightpack

./: .gitignore  .hgignore  50-usb.rules  93-lightpack.rules  HACKING  INSTALL  INSTALL.md  LICENSE-TEMPLATE  README  README.md
AmbilightUSB_Hardware/inc/: 74HC595.h  RGB.h  commands.h  main.h  usbconfig.h  vusb.h
AmbilightUSB_Hardware/src/: 74HC595.c  main.c  vusb.c
AmbilightUSB_PC/: Ambilight.pro  AmbilightUSB.pro  AmbilightWIN32.pro  Makefile.Debug  Makefile.Release  icons.qrc  qrc_icons.cpp  qrc_res_ambilight.cpp  res_ambilight.qrc  ui_aboutdialog.h  ui_mainwindow.h  update_locales.sh
AmbilightUSB_PC/inc/: aboutdialog.h  ambilightusb.h  grabdesktopwindowleds.h  main.h  mainwindow.h  rectgetpixel.h  settings.h  struct_rgb.h  timeevaluations.h  version.h
AmbilightUSB_PC/moc/: moc_aboutdialog.cpp  moc_ambilightusb.cpp  moc_grabdesktopwindowleds.cpp  moc_mainwindow.cpp
AmbilightUSB_PC/res/: AmbilightUSB.rc  res_ambilight.qrc
AmbilightUSB_PC/src/: aboutdialog.cpp  aboutdialog.ui  ambilightusb.cpp  grabdesktopwindowleds.cpp  hiddata.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  rectgetpixel.cpp
AmbilightUSB_PC/translations/: Ambilight_ru_RU.qm  Ambilight_ru_RU.ts
CommonHeaders/: LEDS_COUNT.h  LIGHTPACK_HW.h  RGB.h  USB_ID.h  commands.h
Debug/: AmbilightUSB.map  makefile  sources.mk
Firmware/: .cproject  .project  74HC595.h  CHANGELOG  CHANGELOG.md  Def.h  Descriptors.c  Descriptors.h  LUFAConfig.h  LedDriver.c  LedDriver.h  LedManager.c  LedManager.h  Lightpack.c  Lightpack.h  Lightpack.hex  LightpackUSB.c  LightpackUSB.h  Lightpack_hw4.hex  Lightpack_hw5.hex  Lightpack_hw6.hex  Lightpack_hw7.hex  Makefile  Version.h  datatypes.h  flags.h  iodefs.h  makefile  version.h  vusb.c
Firmware/LUFA/: Doxygen.conf  Version.h  makefile
Firmware/inc/: 74HC595.h  RGB.h  commands.h  main.h  usbconfig.h  version.h  vusb.h
Firmware/src/: 74HC595.c  main.c  vusb.c
FirmwarePWM/: 74HC595.h  CHANGELOG.md  main.c  main.h  version.h
FirmwareUSB/: CHANGELOG.md  main.c  main.h  usbconfig.h  version.h  vusb.c  vusb.h
Hardware/: AmbilightUSB.brd  AmbilightUSB_v2.1.2.sch  AmbilightUSB_v2.1.lay  AmbilightUSB_v2.1.sch  CHANGELOG  CHANGELOG.md  Lightpack.brd  Lightpack.sch
Hardware/old/: AmbilightUSB_hw3.7.sch  AmbilightUSB_v2.1.2.sch  AmbilightUSB_v2.1.3.sch
Software/: AmbilightUSB.pro  CHANGELOG  CHANGELOG.md  Doxyfile.original  Doxyfile.readme  Lightpack.pro  build-config.prf  build-deb.sh  build-vars.prf.original  update_locales.bat  update_locales.bat.original  update_locales.sh
Software/PythonQT/: CMakeLists.txt  Makefile  createSolution.bat
Software/PythonQt/: PythonQt.pro  build.sh
Software/alienfx/: LFX2.h  LFXDecl.h
Software/apiexamples/: Animexamples.py  ApiServerStressTest.py  Class_example.py  GmailChecker.py  Gmail_checker.py  SkypeBuddyCheck.py  lightpack.py
Software/apiexamples/PocketBook LightpackDrivePB/: CMakeLists.txt  README.TXT  makearm.sh  makepc.sh  push.sh
Software/apiexamples/PocketBook LightpackDrivePB/cimages/: readme.txt
Software/apiexamples/PocketBook LightpackDrivePB/src/: LightpackDrivePB.c
Software/common/: BufferFormat.h  D3D10GrabberDefs.hpp  defs.h  msvcstub.h
Software/dist_linux/: build-deb.sh  prepare_deb.pl
Software/dist_osx/: build-dmg.sh
Software/dist_windows/: readme.txt  script.iss
Software/dmg/: dsstore
Software/grab/: AvgColorCalculator.cpp  AvgColorCalculator.hpp  D3D10Grabber.cpp  D3D9Grabber.cpp  GrabberBase.cpp  GrabberBase.hpp  IGrabber.hpp  MacOSGrabber.cpp  MacOSGrabber.hpp  QtGrabber.cpp  QtGrabber.hpp  QtGrabberEachWidget.cpp  QtGrabberEachWidget.hpp  TimeredGrabber.cpp  VirtualDesktop.cpp  VirtualDesktop.hpp  WinAPIGrabber.cpp  WinAPIGrabber.hpp  WinAPIGrabberEachWidget.cpp  WinDXUtils.cpp  WinUtils.cpp  X11Grabber.cpp  X11Grabber.hpp  calculations.cpp  calculations.hpp  configure-grabbers.prf  grab.pro  grab_api.h  grab_qt.cpp  grab_winapi.cpp  grab_x11.cpp
Software/hooks/: D3D9FrameGrabber.cpp  D3D9FrameGrabber.hpp  DxgiFrameGrabber.cpp  DxgiFrameGrabber.hpp  GAPIProxyFrameGrabber.cpp  GAPIProxyFrameGrabber.hpp  GAPISubstFunctions.hpp  IPCContext.cpp  IPCContext.hpp  LoggableTrait.hpp  Logger.cpp  Logger.hpp  ProxyFunc.hpp  ProxyFuncJmp.cpp  ProxyFuncJmp.hpp  ProxyFuncVFTable.hpp  hooks.cpp  hooks.h  hooks.pro  hooksutils.cpp  hooksutils.h  proxyfuncvftable.cpp
Software/inc/: aboutdialog.h  ambilightusb.h  debug.h  defs.h  desktop.h  grabdesktopwindowleds.h  grabmanager.h  hiddata.h  hidsdi.h  ileddevice.h  ledcolors.h  lfxapi.h  lightfx.h  mainwindow.h  movemewidget.h  settings.h  speedtest.h  struct_rgb.h  timeevaluations.h  version.h
Software/installer/: readme.txt  script.iss
Software/libraryinjector/: ILibraryInjector.h  LibraryInjector.c  LibraryInjector.h  dllmain.c  libraryinjector.pro
Software/math/: PrismatikMath.cpp  math.pro
Software/python_binaries_win32/: _bsddb.pyd  _ctypes_test.pyd  _msi.pyd  _testcapi.pyd
Software/qtserialport/: .gitignore  .qmake.conf  qtserialport.pro
Software/res/: Lightpack.rc  LightpackResources.qrc  res_ambilight.qrc
Software/src/: AboutDialog.hpp  AboutPluginDialog.cpp  AboutPluginDialog.hpp  AboutPluginDialog.ui  AbstractLedDevice.cpp  AbstractLedDevice.hpp  ApiServer.cpp  ApiServer.hpp  ApiServerSetColorTask.cpp  ColorButton.cpp  (+98 more)
Software/src/hotkeys/qkeysequencewidget/: CMakeLists.txt  qkeysequencewidget.pri
Software/src/hotkeys/qkeysequencewidget/src/: qkeysequencewidget.cpp  qkeysequencewidget.h  qkeysequencewidget_p.h
XBMC/: addons.xml  addons.xml.md5  readme.txt
(+592 files in other folders)
